jvimalprasathdev/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Active_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date that the user last became active</description>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Channel__c</fullName>
        <formula>IF( contains(UserRole.Name, &quot;Centralized&quot;) || contains (UserRole.Name, &quot;Screener&quot;), &quot;Centralized Retail&quot;, 
 IF( contains(UserRole.Name, &quot;CRA&quot;), &quot;Neighborhood Lending&quot;,
 IF( contains(UserRole.Name, &quot;Distributed&quot;), &quot;Distributed Retail&quot;,
 IF( contains(UserRole.Name, &quot;Home Equity&quot;), &quot;Home Equity&quot;,
&quot;Other&quot; ))))</formula>
        <label>Assigned Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avavilable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avavilable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conventional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conventional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deactivate_Date__c</fullName>
        <description>The date when the user last became inactive</description>
        <label>Deactivate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FHA_Lender_ID__c</fullName>
        <description>To Capture and Hold FHA Lender Id</description>
        <label>FHA Lender ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FHA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FHA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virginia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <description>The date the user was hired.  This is a manual entry field.</description>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Assigned__c</fullName>
        <label>Last Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_limit__c</fullName>
        <label>Lead limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NMLS_ID__c</fullName>
        <label>NMLS ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OOO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OOO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminate_Date__c</fullName>
        <description>The date that the user&apos;s employment was terminated.  This is a manual entry date.</description>
        <label>Terminate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Of_MC__c</fullName>
        <label>Type Of MC</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Equity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>USDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unlimited_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unlimited Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VA</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Extension_Numeric_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Not(ISNUMBER( $User.Extension ))&amp;&amp; Not(ISBLANK($User.Extension))</errorConditionFormula>
        <errorDisplayField>Extension</errorDisplayField>
        <errorMessage>Extension Should Be Numeric</errorMessage>
    </validationRules>
</CustomObject>